--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>鸽姐</title>
   </head>
   <body>
-    <img src="teacher.jpg" alt="" /><img src="teacher.jpg" alt="" /><img src="teacher.jpg" alt="" />
+    <img src="章鱼小丸子.gif" alt="" />
   </body>
 </html>
